Fix horizontal wrapping

--- a/teachertool/src/components/styling/CatalogOverlay.module.scss
+++ b/teachertool/src/components/styling/CatalogOverlay.module.scss
@@ -57,7 +57,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-
+            height: 100%;
 
             button[class*="common-accordion-header-outer"] {
                 background-color: var(--pxt-content-foreground);
